@@ -1,3 +1,8 @@
+2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/model/couch.py:
+	  Start using paisley to save docs.
+
 2011-04-03  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/command/conflict.py:
